# lego-ai-teaching-rig

./: .gitattributes  .gitignore  README.md  cable-robot.code-workspace  main.code-workspace
cable-robot/: README.md  pyproject.toml
cable-robot/src/: main.py
cable-robot/tasks/: relax.py
